<resources>
    <string name="app_name">Buku Uang</string>
    <string name="app_version">v1.2.3</string>
    <string name="title_menu_transaction">Transaksi</string>
    <string name="title_menu_budget">Budget</string>
    <string name="title_menu_analytics">Analisis</string>
    <string name="title_menu_account">Akun</string>
    <string name="title_menu_category">Kategori</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_income">Pendapatan</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_expense">Pengeluaran</string>
    <string name="txt_open">Open</string>
    <string name="txt_close">Close</string>
    <string name="example_income_in_rupiah">Rp81.000,00</string>
    <string name="example_expense_in_rupiah">-Rp81.000,00</string>
    <string name="title_total">Total</string>
    <string name="title_total_account">Total Tabungan</string>
    <string name="example_total_in_rupiah">Rp81.000,00</string>
    <string name="example_month_year">Apr, 2023</string>
    <string name="txt_same_account">Tidak bisa transfer ke Akun yang sama. Periksa kembali!!</string>
    <string name="fab_transaction_desc">untuk menambahkan data transaksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_rv_title_header">May 15, Monday</string>
    <string name="txt_sample_income_reward">Hadiah</string>
    <string name="txt_sample_account">Cash</string>
    <string name="txt_sample_money_in_rupiah">Rp200000</string>
    <string name="txt_expense_money_in_rupiah">-Rp200000</string>
    <string name="txt_title_transfer">Transfer</string>
    <string name="txt_empty">-</string>
    <string name="txt_account_saving">Tabungan</string>
    <string name="title_category_income">Kategori Pendapatan</string>
    <string name="txt_category_reward">Reward</string>
    <string name="txt_category_name">Hadiah</string>
    <string name="txt_description_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="txt_create_new_account">Tambah Akun</string>
    <string name="txt_name">Nama</string>
    <string name="txt_icon">icon</string>
    <string name="msg_to_close_app">Ingin keluar aplikasi?</string>
    <string name="txt_due_date_format">%s (Jatuh Tempo)</string>
    <string name="msg_change_alarm_schedule">Ingin mengganti jadwal Alarm?</string>
    <string name="msg_cancel_alarm_schedule">Batalkan alarm?</string>
    <string name="msg_delete_debt">Menghapus ini dapat menyebabkan semua yang berkaitan akan terhapus. Uang pada akun tidak dikembalikan (akan tetap berkurang).</string>
    <string name="msg_delete_failed">Gagal Menghapus.</string>
    <string name="msg_too_over">Terlalu Besar</string>
    <string name="msg_already_exist">Sudah ada.</string>
    <string name="msg_delete">Apakah anda yakin ingin menghapus?</string>
    <string name="txt_hour_and_minute">%1s:%2s</string>
    <string name="txt_alarm_transaction_time">%1s : %2s</string>
    <string name="msg_date_picker">Pilih Tanggal</string>
    <string name="msg_time_picker">Pilih Waktu</string>
    <string name="msg_empty">Tidak Boleh Kosong</string>
    <string name="msg_title_debt_notification">Hutang %s</string>
    <string name="msg_failed_update">Gagal Perbarui</string>
    <string name="msg_failed_to">Gagal %s.</string>
    <string name="msg_success_to">Berhasil %s.</string>
    <string name="msg_success">Berhasil</string>
    <string name="msg_failed">Gagal</string>
    <string name="msg_choose_icon">Pilih Icon!!</string>
    <string name="msg_allowed">Izinkan</string>
    <string name="msg_allow_access_storage">Izinkan untuk akses penyimpanan.</string>
    <string name="msg_allow_notification">Izinkan untuk notifikasi.</string>
    <string name="msg_empty_backup_file_directory">Pilih direktori penyimpanan.</string>
    <string name="txt_empty_list">Belum ada catatan.</string>
    <string name="txt_category">Kategori</string>
    <string name="txt_create_category">Tambah Kategori</string>
    <string name="txt_transaction">Transaksi</string>
    <string name="title_note">Catatan</string>
    <string name="txt_edt_hint_note">Catatan..</string>
    <string name="txt_date">Tanggal</string>
    <string name="txt_amount">Jumlah</string>
    <string name="txt_save">Simpan</string>
    <string name="txt_from_account">Dari Akun</string>
    <string name="txt_to_account">Ke Akun</string>
    <string name="txt_time">Waktu</string>
    <string name="txt_monthly">Bulanan</string>
    <string name="txt_daily">Harian</string>
    <string name="txt_title_dialog_date_type">Tampilan tanggal</string>
    <string name="txt_add">Tambah</string>
    <string name="txt_limit">Limit</string>
    <string name="txt_zero_percent">0%</string>
    <string name="txt_budget">Budget</string>
    <string name="txt_caution_delete">Apakah anda yakin ingin menghapus?</string>
    <string name="msg_delete_dialog">Menghapus item ini dapat menyebabkan semua yang berkaitan akan terhapus semua!!.</string>
    <string name="txt_yes">Ya</string>
    <string name="txt_cancel">Batalkan</string>
    <string name="txt_backup">Cadangkan</string>
    <string name="txt_restore">Pulihkan</string>
    <string name="txt_select_directory">Pilih direktori</string>
    <string name="txt_copyright">©2023 R.A Dev</string>
    <string name="txt_backup_and_restore">Cadangkan</string>
    <string name="txt_backup_format">%s_%s.zip</string>
    <string name="txt_debt">Hutang</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_detail_debt">Detail Hutang</string>
    <string name="txt_due_date">Jatuh Tempo</string>
    <string name="total_list">Jumlah catatan :</string>
    <string name="txt_example_time">00 : 00</string>
    <string name="txt_transaction_view">Transaksi View</string>
    <string name="txt_alarm_transaction">Alarm Transaksi</string>
    <string name="txt_transaction_alarm_msg">Jangan lupa mencatat ya!!</string>
    <string name="txt_account_minus">"Uang pada akun akan minus. Apakah ingin tetap melanjutkan?"</string>
    <string name="txt_continue">Lanjutkan</string>
    <string name="txt_file_name">Nama File</string>

    <string-array name="transaction_type">
        <item>Pengeluaran</item>
        <item>Pendapatan</item>
        <item>Transfer</item>
    </string-array>

    <string-array name="backup_and_restore_tips">
        <item>Data yang dibackup tidak akan terhapus walaupun aplikasi di uninstall.</item>
        <item>Sebelum melakukan backup atau restore pilih direktori penyimpanan.</item>
        <item>Ketika data dibackup akan berupa file .zip. Contoh: bk_uang(tahun-bulan-tanggal).zip.</item>
        <item>Saat ingin melakukan restore, pastikan direktori sesuai dengan file saat disimpan.</item>
        <item>Pastikan nama file bk_uang(tahun-bulan-tanggal).zip.</item>
        <item>Setelah melakukan restore, data saat itu akan tergantikan dengan data yang baru.</item>
    </string-array>

</resources>