<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_marginStart="8dp"
        android:id="@+id/iv_caution"
        android:src="@drawable/baseline_warning_48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_empty" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/iv_caution"
        android:text="@string/txt_caution_delete" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <TextView
        android:id="@+id/tv_msg_delete"
        android:text="@string/msg_delete_dialog"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginTop="32dp"
        android:layout_below="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@id/tv_msg_delete"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="8dp"
            android:id="@+id/btn_yes"
            android:textAllCaps="false"
            android:text="@string/txt_yes"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginTop="8dp"
            android:id="@+id/btn_no"
            android:textAllCaps="false"
            android:text="@string/txt_cancel"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>