<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="8dp"
        android:text="@string/txt_title_dialog_date_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:checkedButton="@id/rb_daily"
        android:id="@+id/radio_group"
        android:layout_below="@id/tv_title"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_daily"
            android:text="@string/txt_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_monthly"
            android:text="@string/txt_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_below="@id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

</RelativeLayout>