<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.transaction.fragment.CreateTransferFragment">

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:id="@+id/tv_title_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/indigo_90"
            app:backgroundTint="@color/white"
            android:text="@string/txt_empty"
            android:id="@+id/edt_date"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_toEndOf="@id/tv_title_date"
            android:layout_width="100dp"
            android:layout_height="60dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="4dp"
            android:id="@+id/tv_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/txt_time"
            android:textSize="16sp"
            android:layout_toEndOf="@id/edt_date"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/indigo_90"
            app:backgroundTint="@color/white"
            android:text="@string/txt_empty"
            android:id="@+id/btn_time"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_toEndOf="@id/tv_time"
            android:layout_width="100dp"
            android:layout_height="60dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="48dp"
            android:textSize="16sp"
            android:layout_below="@id/tv_title_date"
            android:id="@+id/tv_title_from_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/txt_from_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:layout_below="@id/tv_title_date"
            android:background="@drawable/bg_spinner"
            android:id="@+id/sp_from_account"
            android:layout_marginTop="48dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_title_from_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="48dp"
            android:textSize="16sp"
            android:layout_below="@id/tv_title_from_account"
            android:id="@+id/tv_to_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/txt_to_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:layout_below="@id/tv_title_from_account"
            android:background="@drawable/bg_spinner"
            android:id="@+id/sp_to_account"
            android:layout_marginTop="48dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_title_from_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:id="@+id/tv_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/txt_amount"
            android:layout_below="@id/sp_to_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_amount"
            android:maxLength="9"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_below="@id/sp_to_account"
            android:layout_toStartOf="@id/iv_calculator"
            android:layout_toEndOf="@id/tv_title_from_account"
            android:background="@drawable/bg_input_layout"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:lines="1"
            android:inputType="number"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_alignParentEnd="true"
            android:id="@+id/iv_calculator"
            android:layout_marginTop="32dp"
            android:layout_below="@id/sp_to_account"
            android:src="@drawable/baseline_calculate_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:id="@+id/tv_title_note"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_below="@id/edt_amount"
            android:text="@string/title_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@+id/edt_amount"
            android:layout_toEndOf="@id/tv_title_from_account"
            android:id="@+id/input_layout_edt_note"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@drawable/bg_input_layout"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/edt_note"
                android:lines="4"
                android:singleLine="false"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="8dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/btn_save"
            android:text="@string/txt_save"
            android:layout_below="@id/input_layout_edt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</layout>